# gerenciamentocms

./: .gitignore  README.md  a.txt  clean.sh  docker-compose.yml  firestore.rules  generate_prices.py  nextsetp.md  padrao_arquivos.md  padrao_comentarios.md  prices.csv  render.yaml  verificador.sh  wifi_snatch_mac.sh
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
Padroes_iniciais/: PADRAO_BACKEND_RUST.md  PADRAO_ESTRUTURA_DE_ARQUIVOS.md.md  PADRAO_FRONTEND_TYPESCRIPT_TAILWIND.md  TUTORIAL_DEPLOY.md  prompt_inicial.txt
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt  serviceAccountKey.json
backend/app/: main.py
backend/app/auth/: deps.py  firebase.py
backend/app/services/: ai_service.py  ai_tools.py
backend/src/: config.rs  error.rs  main.rs
backend/src/modules/: ai.rs  email.rs  mod.rs  utils.rs
backend/src/modules/auth/: mod.rs
backend/src/modules/backlog/: mod.rs
backend/src/modules/event_definitions/: mod.rs
backend/src/modules/events/: mod.rs
backend/src/modules/lpus/: mod.rs
backend/src/modules/managements/: mod.rs  models.rs
backend/src/modules/oc_events/: mod.rs
backend/src/modules/occurrences/: mod.rs
backend/src/modules/ocs/: mod.rs
backend/src/modules/plannings/: mod.rs
backend/src/modules/project_avoidances/: mod.rs
backend/src/modules/residents/: mod.rs
backend/src/modules/suppliers/: mod.rs
backend/src/modules/team/: mod.rs
backend/src/modules/works/: handlers.rs  mod.rs  models.rs  repository.rs
backup/: .dockerignore  Dockerfile
(+139 files in other folders)
