[package]
name = "cms-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & Async Runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment & Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (GCP Firestore)
# Usando firestore-rs que é uma crate popular e ergonômica para Firestore
firestore = "0.42" 

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] } # Para chamadas externas se precisar
time = "=0.3.36"
base64 = "0.22.1"
